--- a/static/css/home.css
+++ b/static/css/home.css
@@ -7,66 +7,99 @@
 }
 
 body {
-    background-repeat: no-repeat;
-    background-color: #ffffff;
-    background-image: url("https://live.staticflickr.com/65535/49783813212_6b141639ab_b.jpg");
+    background-image: url("/static/images/home.png");
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: right;
 }
 
-.container {
-    height: 100vh;
-    width: 100%;
-    background: linear-gradient(to right, #93C572 70%, #C8EBB1 30%);
-    position: relative;
-    overflow: hidden;
-}
-.wave {
-    position: absolute;
-    top: 0;
-    right: 30%;
+#nav-placeholder{
+    box-shadow: 0px 5px 10px rgba(8, 36, 3, 0.342);
 }
 
-.main-content {
-    width: 60%;
-    padding-top: 100px;
-    margin-left: 3rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-.image-pista ,.main-text{
-    flex-basis: 50%;
-}
-.image-pista img{
-    width: 100%;
-}
-.main-content h1 {
-    font-size: 60px;
-    letter-spacing: 1px;
-    color: #494234;
-}
-.main-content p{
-    margin-top: 10px;
-    font-size: 15px;
-    letter-spacing: 1px;
-}
-.main-content button{
-    margin-top: 2.5rem;
-    outline: none;
-    border: none;
-    font-size: 18px;
-    padding: 0.5rem 2.5rem 0.5rem 1rem;
-    border-radius: 0 50% 50% 0;
-    background-color: #494234;
-    color: white;
-    cursor: pointer;
-}
-.swiper{
-    width: 20rem;
-}
-.swiper-slide{
-    display: flex;
+.showcase-area .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
     justify-content: center;
+}
+
+.left{
+    margin-top: 23%;
+}
+
+.left h1, .left h2, .left h3 {
+    line-height: 80%;
+}
+ 
+.showcase-area .container .left h1{
+    padding-top: 14px;
+    font-size: 89px;
+    font-weight: 700;
+    color: #ffffff;
+}
+
+.showcase-area .container .left h2{
+    font-size: 54px;
+    font-weight: 700;
+    color: #ffffff;
+}
+
+.showcase-area .container .left h3{
+    font-size: 26px;
+    font-weight: 600;
+    color: #ffffff;
+}
+
+@media screen and (max-width: 870px) {
+    .left{
+        margin-top: 15%;
+        padding: 10px;
+        background-color: #008000;
+    }
+    .showcase-area {
+      padding: 2.5rem 0;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+  
+    .showcase-area .container {
+      grid-template-columns: 1fr;
+      justify-content: center;
+      grid-gap: 2rem;
+    }
+
+}
+
+@media screen and (max-width: 470px) {
+    .left{
+        padding: 10px;
+        background-color: #008000;
+    }
+
+    .left h1, .left h2, .left h3 {
+        line-height: 70%;
+        text-align: center;
+    }
+     
+    .showcase-area .container .left h1{
+        padding-top: 14px;
+        font-size: 55px;
+        font-weight: 700;
+        color: #ffffff;
+    }
+    
+    .showcase-area .container .left h2{
+        font-size: 40px;
+        font-weight: 700;
+        color: #ffffff;
+    }
+    
+    .showcase-area .container .left h3{
+        font-size: 23px;
+        font-weight: 600;
+        color: #ffffff;
+    }
+
 }
