--- a/sub/templates/sub/homepage.html
+++ b/sub/templates/sub/homepage.html
@@ -4,7 +4,7 @@
     <head>
         {% load static %}
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="{% static 'css/#.css' %}">
+        <link rel="stylesheet" href="{% static 'css/home.css' %}">
         <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.min.css' %}">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,20 +12,31 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link href="{% static 'images/wesmalogo.png' %}" rel="icon">
         <title>WESMAARRDEC</title>
-        <style>
+        <!-- <style>
           body {
             background-image: url("{% static 'images/home.png' %}");
+            background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            background-size: 100% 100%;
+            background-position: right;
           }
-          </style>
+          </style> -->
     </head>
 
     <body>
         <div id="nav-placeholder"></div>
 
-      
+        <div class="showcase-area">
+          <div class="container">
+            <div class="left">
+                <h1>CMI</h1>
+                <h2>PROFILING</h2>
+                <h3>MANAGEMENT</h3>
+                <h3>INFORMATION</h3>
+                <h3>SYSTEM</h3>
+            </div>
+          </div>
+        </div>
 
         <script>
             $(function(){
