updated as responsive

--- a/static/css/secretariat.css
+++ b/static/css/secretariat.css
@@ -209,4 +209,31 @@ h2{
         gap: 16px;
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     }
+    #btn{
+        margin-top: 2rem;
+        font-size: 10px;
+    }
+    #btn i{
+        font-size: 20px;
+    }
+    .wrapper h2{
+        margin-top: -1rem;
+        font-size: 19px;
+    }
+    .box .btn{
+    border: 1px;
+    outline: none;
+    font-family: Poppins;
+    font-size: 13px;
+    margin-top: auto;
+    margin-right: 23px;
+    margin-left: 23px;
+    padding: 8px 15px;
+    color: #ffffff;
+    background: #008000;
+    border-radius: 5px;
+    display: inline-block;
+    text-decoration: none;
+    font-weight: 600;
+    }
 }
