--- a/sub/templates/sub/audit_trail.html
+++ b/sub/templates/sub/audit_trail.html
@@ -30,6 +30,7 @@
 		  </table> 
 		  <br>
 
+		  <!-- <div class="Table_Div" > -->
 		  <table id="tbl" class="table table-bordered">
             <thead>
 			  <tr>
@@ -59,7 +60,7 @@
 			</tbody>
 			{% endfor %}
 		  </table>
-
+		<!-- </div> -->
 
 		<script>
 			$(function(){
@@ -67,7 +68,6 @@
 			});
 		</script>
 		
-
 
     </body>
 </html>     
