--- a/sub/templates/sub/cmi_summary.html
+++ b/sub/templates/sub/cmi_summary.html
@@ -45,7 +45,7 @@
             	    <img class="img_logo" src="{{ cmi.logo.url }}" alt="img_photo" style="width:80px; height:80px; display:block; margin-left: auto; margin-right: auto;">
             	    {% endif %}
                 </td>
-				<td><p>{{cmi.agency_code}}</p>
+				<td><h4>{{cmi.agency_code}}</h4>
                     {% if cmi.url %}
                     <a href="{{cmi.url}}" target="_blank">{{cmi.name}}</a>
                     {% else %}
