--- a/consortium/templates/consortium/details.html
+++ b/consortium/templates/consortium/details.html
@@ -65,7 +65,7 @@
                     <table id="table_cmi" class="table table-sm">
                         <thead>
                           <tr>
-                            <th scope="col">Commodities:</th>
+                            <th scope="col">Commodities</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -83,7 +83,7 @@
                     <table id="table_cmi" class="table table-sm">
                         <thead>
                           <tr>
-                            <th scope="col">Programs:</th>
+                            <th scope="col">Programs</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -101,7 +101,7 @@
                     <table id="table_cmi" class="table table-sm">
                         <thead>
                           <tr>
-                            <th scope="col">Projects:</th>
+                            <th scope="col">Projects</th>
                           </tr>
                         </thead>
                         <tbody>
