--- a/program/templates/program/details.html
+++ b/program/templates/program/details.html
@@ -99,7 +99,7 @@
                           <table id="table_cmi" class="table table-sm">
                               <thead>
                                 <tr>
-                                  <th scope="col">Projects:</th>
+                                  <th scope="col">Projects</th>
                                 </tr>
                               </thead>
                               <tbody>
