--- a/static/css/summary.css
+++ b/static/css/summary.css
@@ -11,6 +11,11 @@ body {
     /* background-image: url("https://www.transparenttextures.com/patterns/climpek.png");  */
 }
 
+/* .Table_Div {
+    height: 420px; 
+    overflow: auto; 
+} */
+
 #head {
     margin-left: auto;
     margin-right: auto;
@@ -77,7 +82,7 @@ body {
     text-align: left;
     color: #1b641b;
     background-color: transparent;
-    border: 2px solid #008000;
+    border: 3px solid #008000;
     table-layout: fixed;
 }
 
@@ -100,7 +105,7 @@ body {
     height:auto;
 }
 
-#tbl tbody tr td p {
+#tbl tbody tr td h4 {
     line-height: 40%;
     font-weight: 700;
     font-size: 19px;
@@ -131,6 +136,85 @@ body {
 }
 
 @media (max-width:500px) {
+    #head tr .title{
+        padding-left: 20px;
+        width: 73%;
+        font-weight: 600;
+        color: white;
+        font-size: 22px;
+        background-color:transparent;
+        cursor: pointer;
+    }
+    #head tr .add{
+        text-align: center;
+        font-size: 10px;
+        cursor: pointer;
+    }
+    #tbl {
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 1px;
+        font-family: Arial, Helvetica, sans-serif;
+        border-collapse: collapse;
+        max-width: 92%;
+        text-align: left;
+        border: 2px solid #008000;
+    }
+    
+    #tbl thead tr th{
+        color: #ffffff;
+        background-color: #008000;
+    }
+    
+    #tbl tbody tr td a{
+        text-decoration: none;
+        color: #0d560d;
+        font-size: 10px;
+        font-weight: 700;
+    }
+    
+    #tbl tbody tr td a i{
+        text-decoration: none;
+        color: #0d560d;
+        letter-spacing: 3px;
+        font-size: 10px;
+        font-weight: 700;
+    }
+    
+    #tbl tbody tr td {
+        line-height: 120%;
+        font-weight: 700;
+        font-size: 19px;
+    }
+
+    #tbl tbody tr td h4{
+        line-height: 50%;
+        font-weight: 700;
+        font-size: 14px;
+    }
+
+    #tbl tbody tr td a i:hover{
+        color: #117911;
+    }
+    
+    #tbl thead tr th{
+        font-weight: 700;
+        font-size: 10px;
+    }
+
+    #tbl tbody tr th{
+        font-weight: 700;
+        font-size: 10px;
+    }
+
+    #tbl tbody tr td{
+        font-weight: 700;
+        font-size: 10px;
+    }
+    
+    #tbl tbody tr th{
+        font-weight: 600;
+    }
 
     #tbl tbody tr td .img_logo {
         max-width:44px;
@@ -139,4 +223,9 @@ body {
         height:auto;
     }
 }
+
+
+    
+
+
 
