--- a/sub/templates/sub/tbl_iec.html
+++ b/sub/templates/sub/tbl_iec.html
@@ -48,7 +48,7 @@
 			{% for iecmaterial in iecmaterials %}
 			<tbody>
 			  <tr>
-				<th scope="row">{{iecmaterial.title}}</th>
+				<td>{{iecmaterial.title}}</th>
 				<td>{{iecmaterial.iec_type}}</td>
 				<td>{{iecmaterial.designed_by}}</td>
 				<td>{{iecmaterial.content_by}}</td>
