--- a/sub/templates/sub/tbl_priorityarea.html
+++ b/sub/templates/sub/tbl_priorityarea.html
@@ -43,7 +43,7 @@
 			{% for priorityarea in priorityareas %}
 			<tbody>
 			  <tr>
-				<th scope="row">{{priorityarea.area}}</th>
+				<td>{{priorityarea.area}}</th>
 
 				<td style="font-size: 14px;">
 					<a href="{% url 'sub:detail_prioarea' priorityarea.priority_id %}"><i class="bx bx-food-menu" title="View"></i>
