--- a/sub/templates/sub/tbl_projectimpsite.html
+++ b/sub/templates/sub/tbl_projectimpsite.html
@@ -47,7 +47,7 @@
 			{% for projimp in projectimpsites %}
 			<tbody>
 			  <tr>
-				<th scope="row">{{projimp.proj_id}}</th>
+				<td>{{projimp.proj_id}}</th>
 				<td>{{projimp.barangay}}</td>
 				<td>{{projimp.city}}</td>
 				<td>{{projimp.province}}</td>
