--- a/sub/templates/sub/tbl_projectoutput.html
+++ b/sub/templates/sub/tbl_projectoutput.html
@@ -44,7 +44,7 @@
 			{% for projectoutput in projectoutputs %}
 			<tbody>
 			  <tr>
-				<th scope="row">{{projectoutput.proj_id}}</th>
+				<td>{{projectoutput.proj_id}}</th>
 				<td>{{projectoutput.proj_output_type}}</td>
 
 
