--- a/sub/templates/sub/tbl_sdg.html
+++ b/sub/templates/sub/tbl_sdg.html
@@ -43,7 +43,7 @@
 			{% for sdg in sdgs %}
 			<tbody>
 			  <tr>
-				<th scope="row">{{sdg.sdg_title}}</th>
+				<td>{{sdg.sdg_title}}</th>
 
 				<td style="font-size: 14px;">
 					<a href="{% url 'sub:detail_sdg' sdg.sdg_title %}"><i class="bx bx-food-menu" title="View"></i>
