--- a/program/templates/program/pdf_page.html
+++ b/program/templates/program/pdf_page.html
@@ -5,7 +5,7 @@
     {% load static %}
     {% load widget_tweaks %}
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="{% static 'css/pdf_page.css' %}">
+    <link rel="stylesheet" href="{% static 'css/pdf_page_prog.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.min.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
