--- a/secretariat/templates/secretariat/pdf_page.html
+++ b/secretariat/templates/secretariat/pdf_page.html
@@ -5,7 +5,7 @@
     {% load static %}
     {% load widget_tweaks %}
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="{% static 'css/pdf_page.css' %}">
+    <link rel="stylesheet" href="{% static 'css/pdf_page_sec.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.min.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,7 +61,7 @@
             <th scope="col">SPECIALIZATION</th>
             <th scope="col">EMAIL ADDRESS</th>
             <th scope="col">PDF</th>
-            
+          
           </tr>
         </thead>
         {% for secretariat in secretariat_filter.qs %}
