--- a/static/css/pdf_page_cmi.css
+++ b/static/css/pdf_page_cmi.css
@@ -122,10 +122,105 @@ body {
     background-color: #008000ca;
 }
 
-@media (max-width:770px) {
+/* @media (max-width:770px) {
 }
 
 @media (max-width:400px) {
     
-}
+} */
 
+@media (max-width: 500px) {
+    #head tr .title{
+        padding-left: 10px;
+        width: 72%;
+        font-weight: 600;
+        color: white;
+        font-size: 16px;
+        background-color:transparent;
+        cursor: pointer;
+    }
+    #head tr .main{
+        text-align: center;
+        font-size: 10px;
+        cursor: pointer;
+    }
+    .container{
+        margin-top: 20px;
+        display: grid;
+        gap: 16px;
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    }
+    #btn{
+        margin-top: 2rem;
+        font-size: 10px;
+    }
+    #btn i{
+        font-size: 20px;
+    }
+    .wrapper h2{
+        margin-top: -1rem;
+        font-size: 19px;
+    }
+    .box .btn{
+        border: 1px;
+        outline: none;
+        font-family: Poppins;
+        font-size: 13px;
+        margin-top: auto;
+        margin-right: 23px;
+        margin-left: 23px;
+        padding: 8px 15px;
+        color: #ffffff;
+        background: #008000;
+        border-radius: 5px;
+        display: inline-block;
+        text-decoration: none;
+        font-weight: 600;
+    }
+    .box h2{
+        padding: 30px 0 2px 0;
+        font-size: 13px;
+        font-weight: 600;
+    }
+    h3{
+        display: none;
+    }
+    .img_team{
+        width:120px; 
+        height:120px; 
+        display:block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .form-group{
+        font-size: 14px;
+        height: -12rem;
+    }
+    #btn{
+        color: white;
+        background-color: #008000ad;
+        padding: 7px;
+        border: none;
+        margin-top: -13rem;
+        border-radius: 5px;
+        font-size: 13px;
+    }
+    #tbl{
+        width: 80%;
+    }
+    #tbl thead tr th{
+        font-size: 13px;
+    }
+    #tbl tbody tr th{
+        font-size: 13px;
+    }
+    #tbl tbody tr td a{
+        font-size: 13px;
+    }
+    #tbl thead tr th:nth-child(2){
+        display: none;
+    }
+    #tbl tbody tr th:nth-child(2){
+        display: none;
+    }
+}
