--- a/static/css/projout.css
+++ b/static/css/projout.css
@@ -121,3 +121,34 @@ body {
     
 }
 
+@media (max-width: 500px) {
+    #head tr .title{
+        padding-left: 10px;
+        width: 73%;
+        font-weight: 600;
+        color: white;
+        font-size: 22px;
+        background-color:transparent;
+        cursor: pointer;
+    }
+    #head tr .add{
+        text-align: center;
+        font-size: 10px;
+        cursor: pointer;
+    }
+    #tbl thead tr th{
+        font-size: 14px;
+    }
+    #tbl tbody tr td{
+        font-size: 13px;
+    }
+    #tbl tbody tr td a i{
+        font-size: 13px;
+    }
+    #tbl thead tr th:nth-child(2){
+        display: none;
+    }
+    #tbl tbody tr td:nth-child(2){
+        display: none;
+    }
+}
