--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -133,6 +133,16 @@ form .row .btn:hover{
   .wrapper .title{
     font-size: 20px;
   }
+  .wrapper form .checkbox{
+    height: 80px;
+    text-align: left;
+    padding-left: 60px;
+    margin: auto;
+    color: #008000;
+    font-weight: 700;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
 }
 
 @media (max-width: 1200px) {  
