--- a/sub/templates/sub/detail_researcher.html
+++ b/sub/templates/sub/detail_researcher.html
@@ -25,7 +25,7 @@
                 {% endif %}
                 <div class="text-box">
                     <p>
-                        <div class="fullname">{{researcher.lname}}, {{researcher.fname}} {{researcher.mname}}</div>
+                        <div class="fullname">{{researcher.fname}} {{researcher.mname}} {{researcher.lname}}</div>
                         <div class="content">Agency: {{researcher.cmi}}</div>
                         <div class="content">Address: {{researcher.address}}</div>
                         <div class="content">Email Address: {{researcher.email}}</div>
