--- a/sub/templates/sub/tbl_researcher.html
+++ b/sub/templates/sub/tbl_researcher.html
@@ -50,7 +50,7 @@
 				{% if researcher.photo %}
             	<img class="img_logo" src="{{ researcher.photo.url }}" alt="img_photo" style="width:60px; height:60px; display:block; margin-left: auto; margin-right: auto;">
             	{% endif %}</td>
-				<td>{{researcher.lname}}, {{researcher.fname}}</td>
+				<td>{{researcher.fname}} {{researcher.lname}}</td>
 				<td>{{researcher.cmi}}</td>
 				<td>{{researcher.email}}</td>
 
