--- a/static/css/teams.css
+++ b/static/css/teams.css
@@ -239,6 +239,7 @@ body {
     .box h3{
         color: rgb(11, 117, 11);
         font-size: 10px;
+        padding: 2px;
         line-height: 0.3;
     }
 }
