--- a/consortium/templates/consortium/nav.html
+++ b/consortium/templates/consortium/nav.html
@@ -45,7 +45,7 @@
     <div class="sidebar close">
       <ul class="nav-links">
 
-        {% if user.is_superuser %}
+        {% if user.is_superuser or user.secretariat %}
           <li>
             <a href="{% url 'sub:dashboard' %}">
               <i class='bx bx-sidebar' ></i>
