--- a/static/css/commodities.css
+++ b/static/css/commodities.css
@@ -81,7 +81,6 @@ body {
     background-color: #008000ad;
     padding: 7px;
     border: none;
-    border-radius: 5px;
 }
 
 #btn:hover{
@@ -111,14 +110,14 @@ body {
 }
 
 .container{
-    margin-top: 20px;
+    margin-top: 34px;
     display: grid;
-    gap: 10px;
+    gap: 18px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .img_com{
-    width:200px; 
+    width: 100%; 
     height:190px; 
     display:block;
     margin-left: auto;
@@ -127,19 +126,17 @@ body {
 
 .box{
     height: auto;
-    padding: 12px;
+    padding-bottom: 18px;
     text-align: center;
-    background:#f0f4ee;
+    background:#dfe9df;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.059);
-    border: 2px solid #008000;
-    border-radius: 7px;
     display: flex;
     flex-direction: column;
 }
 
 .box h2{
     font-family: Arial, Helvetica, sans-serif;
-    color: #008000;
+    color: #529346;
     padding: 5px 0;
     font-size: 20px;
     font-weight: 700;
@@ -150,20 +147,21 @@ body {
     color: green;
     font-size: 14px;
     line-height: 1;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .box .btn{
-    border: 1px;
+    border-radius: 0;
     outline: none;
     font-family: Poppins;
     font-size: 17px;
     margin-top: auto;
-    margin-right: 75px;
-    margin-left: 75px;
+    margin-right: 10px;
+    margin-left: 10px;
     padding: 8px 15px;
     color: #ffffff;
     background: #008000;
-    border-radius: 5px;
     display: inline-block;
     text-decoration: none;
     font-weight: 600;
@@ -174,9 +172,6 @@ body {
     background: #339933;
 }
 
-.box:hover{
-    box-shadow: 0 10px 15px rgba(36, 71, 33, 0.3);
-}
 
 @media (max-width:770px) {
     .wrapper{
@@ -223,7 +218,6 @@ body {
         margin-top: 2px;
         padding: 2px 15px;
         background: #e7e6e6;
-        border-radius: 5px;
         display: inline-block;
         text-decoration: none;
     }
@@ -313,7 +307,6 @@ body {
         padding: 7px;
         border: none;
         margin-top: -39rem;
-        border-radius: 5px;
         font-size: 13px;
     } 
 }
