--- a/static/css/researcher.css
+++ b/static/css/researcher.css
@@ -76,8 +76,9 @@ body {
     max-width: 95%;
     text-align: center;
     color: #1b641b;
-    background-color: #7bcf7b;
     border: 2px solid #008000;
+    table-layout:fixed;
+    word-break:break-all;
 }
 
 #tbl thead tr th{
@@ -85,11 +86,14 @@ body {
     background-color: #008000;
 }
 
-#tbl tbody tr td a{
+#tbl tbody tr td .btn{
     text-decoration: none;
-    color: #0d560d;
+    color: #ffffff;
+    word-spacing: 100px;
+    padding: 4px 6px;
     font-size: 16px;
     font-weight: 700;
+    border-radius: 4px;
 }
 
 #tbl tbody tr td a i{
@@ -105,6 +109,7 @@ body {
 }
 
 #tbl thead tr th{
+    overflow:hidden;
     font-weight: 700;
     font-size: 18px;
 }
@@ -112,6 +117,13 @@ body {
 #tbl tbody tr th{
     font-weight: 600;
 }
+
+#tbl th:nth-of-type(1) {width:8%;}
+#tbl th:nth-of-type(2) {width:30%;}
+#tbl th:nth-of-type(3) {width:24%;}
+#tbl th:nth-of-type(4) {width:18%;}
+#tbl th:nth-of-type(5) {width:20%;}
+
 
 @media (max-width:770px) {
 }
