--- a/sub/templates/sub/cmi_summary.html
+++ b/sub/templates/sub/cmi_summary.html
@@ -59,8 +59,8 @@
 					<p class="status" style="background-color: #b63838;">{{cmi.status}}</p>
 					{% endif %}
 
-                    {% if cmi.remarks %}<br>
-                    Remarks: {{cmi.remarks}}
+                    {% if cmi.remarks %}
+                    <p class="remarks" style="color: red;">Remarks: {{cmi.remarks}}</p>
                     {% else %}
                     {% endif %}
                 </td>
