--- a/static/css/cmi.css
+++ b/static/css/cmi.css
@@ -108,10 +108,7 @@ body {
     height: auto;
     padding: 12px;
     text-align: center;
-    background:#f0f4ee;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.059);
-    border: 2px solid #008000;
-    border-radius: 7px;
+    background:#e9eee7;
     display: flex;
     flex-direction: column;
 }
@@ -132,17 +129,16 @@ body {
 }
 
 .box .btn{
-    border: 1px;
+    border-radius: 0;
     outline: none;
     font-family: Poppins;
     font-size: 17px;
     margin-top: auto;
-    margin-right: 75px;
-    margin-left: 75px;
+    margin-right: 10px;
+    margin-left: 10px;
     padding: 8px 15px;
     color: #ffffff;
     background: #008000;
-    border-radius: 5px;
     display: inline-block;
     text-decoration: none;
     font-weight: 600;
@@ -153,9 +149,9 @@ body {
     background: #339933;
 }
 
-.box:hover{
+/* .box:hover{
     box-shadow: 0 10px 15px rgba(36, 71, 33, 0.3);
-}
+} */
   
 .show{
     display:block;
