--- a/static/css/commodities.css
+++ b/static/css/commodities.css
@@ -128,8 +128,7 @@ body {
     height: auto;
     padding-bottom: 18px;
     text-align: center;
-    background:#dfe9df;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.059);
+    background:#e9eee7;
     display: flex;
     flex-direction: column;
 }
@@ -173,7 +172,7 @@ body {
 }
 
 
-@media (max-width:770px) {
+/* @media (max-width:770px) {
     .wrapper{
         padding: 0 4%;
     }
@@ -232,7 +231,7 @@ body {
         height:auto; 
         max-width:80%;
     }
-}
+} */
 
 @media (max-width: 500px) {
     #head tr .title{
