--- a/static/css/program.css
+++ b/static/css/program.css
@@ -82,7 +82,6 @@ body {
     background-color: #008000ad;
     padding: 7px;
     border: none;
-    border-radius: 5px;
 }
 
 #btn:hover{
@@ -114,18 +113,15 @@ body {
 .container{
     margin-top: 20px;
     display: grid;
-    gap: 16px;
+    gap: 18px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .box{
     height: auto;
-    padding: 12px;
+    padding: 13px;
     text-align: center;
     background:#f0f4ee;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.059);
-    border: 2px solid #008000;
-    border-radius: 7px;
     display: flex;
     flex-direction: column;
 }
@@ -159,17 +155,16 @@ body {
 }
 
 .box .btn{
-    border: 1px;
+    border-radius: 0;
     outline: none;
     font-family: Poppins;
     font-size: 17px;
     margin-top: auto;
-    margin-right: 75px;
-    margin-left: 75px;
+    margin-right: 10px;
+    margin-left: 10px;
     padding: 8px 15px;
     color: #ffffff;
     background: #008000;
-    border-radius: 5px;
     display: inline-block;
     text-decoration: none;
     font-weight: 600;
@@ -180,9 +175,9 @@ body {
     background: #339933;
 }
 
-.box:hover{
+/* .box:hover{
     box-shadow: 0 10px 15px rgba(36, 71, 33, 0.3);
-}
+} */
 
 @media (max-width:770px) {
     .wrapper{
