--- a/static/css/secretariat.css
+++ b/static/css/secretariat.css
@@ -107,13 +107,13 @@ h2{
 .container{
     margin-top: 20px;
     display: grid;
-    gap: 16px;
+    gap: 18px;
     grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
 }
 
 .img_team{
-    width:160px; 
-    height:160px; 
+    width: 100%; 
+    height:240px; 
     display:block;
     margin-left: auto;
     margin-right: auto;
@@ -121,12 +121,10 @@ h2{
 
 .box{
     height: auto;
-    padding: 12px;
+    padding-bottom: 18px;
     text-align: center;
     background:#f0f4ee;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.059);
     border: 2px solid #008000;
-    border-radius: 7px;
     display: flex;
     flex-direction: column;
 }
@@ -140,17 +138,16 @@ h2{
 }
 
 .box .btn{
-    border: 1px;
+    border-radius: 0;
     outline: none;
     font-family: Poppins;
     font-size: 17px;
     margin-top: auto;
-    margin-right: 75px;
-    margin-left: 75px;
+    margin-right: 10px;
+    margin-left: 10px;
     padding: 8px 15px;
     color: #ffffff;
     background: #008000;
-    border-radius: 5px;
     display: inline-block;
     text-decoration: none;
     font-weight: 600;
