--- a/static/css/teams.css
+++ b/static/css/teams.css
@@ -81,7 +81,6 @@ body {
     background-color: #008000ad;
     padding: 7px;
     border: none;
-    border-radius: 5px;
 }
 
 #btn:hover{
@@ -113,13 +112,13 @@ body {
 .container{
     margin-top: 20px;
     display: grid;
-    gap: 16px;
-    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+    gap: 18px;
+    grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
 }
 
 .img_team{
-    width:160px; 
-    height:160px; 
+    width: 100%; 
+    height:188px; 
     display:block;
     margin-left: auto;
     margin-right: auto;
@@ -127,12 +126,9 @@ body {
 
 .box{
     height: auto;
-    padding: 12px;
+    padding-bottom: 18px;
     text-align: center;
     background:#f0f4ee;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.059);
-    border: 2px solid #008000;
-    border-radius: 7px;
     display: flex;
     flex-direction: column;
 }
@@ -140,23 +136,22 @@ body {
 .box h2{
     font-family: Arial, Helvetica, sans-serif;
     color: #008000;
-    padding: 5px 0;
-    font-size: 20px;
+    padding: 5px 5px;
+    font-size: 18px;
     font-weight: 700;
 }
 
 .box .btn{
-    border: 1px;
+    border-radius: 0;
     outline: none;
     font-family: Poppins;
     font-size: 17px;
     margin-top: auto;
-    margin-right: 75px;
-    margin-left: 75px;
+    margin-right: 10px;
+    margin-left: 10px;
     padding: 8px 15px;
     color: #ffffff;
     background: #008000;
-    border-radius: 5px;
     display: inline-block;
     text-decoration: none;
     font-weight: 600;
@@ -171,11 +166,9 @@ body {
     color: rgb(8, 86, 8);
     font-size: 14px;
     font-weight: 500;
+    padding: 0 5px;
 }
 
-.box:hover{
-    box-shadow: 0 10px 15px rgba(36, 71, 33, 0.3);
-}
 
 @media (max-width:770px) {
     .wrapper{
