--- a/sub/templates/sub/edit_stakeholder.html
+++ b/sub/templates/sub/edit_stakeholder.html
@@ -24,7 +24,7 @@
             {% csrf_token %}
 
             {{ form|crispy }}
-            <input type="submit" name="Save Data" value="Save Data" class="btn">
+            <input type="submit" name="Save Data" value="Save Changes" class="btn">
         </form>
 
         <script>
