--- a/static/css/prioarea.css
+++ b/static/css/prioarea.css
@@ -77,8 +77,9 @@ body {
     max-width: 95%;
     text-align: center;
     color: #1b641b;
-    background-color: #7bcf7b;
     border: 2px solid #008000;
+    table-layout:fixed;
+    word-break:keep-all;
 }
 
 #tbl thead tr th{
@@ -86,11 +87,14 @@ body {
     background-color: #008000;
 }
 
-#tbl tbody tr td a{
+#tbl tbody tr td .btn{
     text-decoration: none;
-    color: #0d560d;
+    color: #ffffff;
+    word-spacing: 100px;
+    padding: 4px 6px;
     font-size: 16px;
     font-weight: 700;
+    border-radius: 4px;
 }
 
 #tbl tbody tr td a i{
@@ -106,6 +110,7 @@ body {
 }
 
 #tbl thead tr th{
+    overflow:hidden;
     font-weight: 700;
     font-size: 18px;
 }
@@ -113,6 +118,9 @@ body {
 #tbl tbody tr th{
     font-weight: 600;
 }
+
+#tbl th:nth-of-type(1) {width:76%;}
+#tbl th:nth-of-type(2) {width:24%;}
 
 @media (max-width:770px) {
 }
