--- a/static/css/sdg.css
+++ b/static/css/sdg.css
@@ -77,13 +77,24 @@ body {
     max-width: 95%;
     text-align: center;
     color: #1b641b;
-    background-color: #7bcf7b;
     border: 2px solid #008000;
+    table-layout:fixed;
+    word-break:keep-all;
 }
 
 #tbl thead tr th{
     color: #ffffff;
     background-color: #008000;
+}
+
+#tbl tbody tr td .btn{
+    text-decoration: none;
+    color: #ffffff;
+    word-spacing: 100px;
+    padding: 4px 6px;
+    font-size: 16px;
+    font-weight: 700;
+    border-radius: 4px;
 }
 
 #tbl tbody tr td a{
@@ -106,6 +117,7 @@ body {
 }
 
 #tbl thead tr th{
+    overflow:hidden;
     font-weight: 700;
     font-size: 18px;
 }
@@ -113,6 +125,10 @@ body {
 #tbl tbody tr th{
     font-weight: 600;
 }
+
+#tbl th:nth-of-type(1) {width:80%;}
+#tbl th:nth-of-type(2) {width:20%;}
+
 
 @media (max-width: 500px) {
     #head tr .title{
