--- a/sub/templates/sub/tbl_priorityarea.html
+++ b/sub/templates/sub/tbl_priorityarea.html
@@ -32,7 +32,7 @@
 		  </table> 
 		  <br>
 
-		  <table id="tbl" class="table table-hover">
+		  <table id="tbl" class="table table-bordered">
 			<thead>
 			  <tr>
 				<th scope="col">AREA</th>
@@ -45,10 +45,10 @@
 			  <tr>
 				<td>{{priorityarea.area}}</th>
 
-				<td style="font-size: 14px;">
-					<a href="{% url 'sub:detail_prioarea' priorityarea.priority_id %}"><i class="bx bx-food-menu" title="View"></i>
-					<a href="{% url 'sub:edit_prioarea' priorityarea.priority_id  %}"><i class="bx bx-edit-alt" title="Edit"></i>
-					<a href="{% url 'sub:delete_prioarea' priorityarea.priority_id  %}"><i class="bx bx-trash" title="Delete"></i>
+				<td>
+					<a href="{% url 'sub:detail_prioarea' priorityarea.priority_id %}" class="btn btn-primary">View</a>&nbsp;
+					<a href="{% url 'sub:edit_prioarea' priorityarea.priority_id  %}" class="btn btn-success">Edit</a>&nbsp;
+					<a href="{% url 'sub:delete_prioarea' priorityarea.priority_id  %}" class="btn btn-danger">Delete</a>
 				</td>
 
 			  </tr>
