--- a/sub/templates/sub/tbl_sdg.html
+++ b/sub/templates/sub/tbl_sdg.html
@@ -31,7 +31,7 @@
 		  </table> 
 		  <br>
 
-		  <table id="tbl" class="table table-hover">
+		  <table id="tbl" class="table table-bordered">
 			<thead>
 			  <tr>
 				<th scope="col">TITLE</th>
@@ -45,10 +45,10 @@
 			  <tr>
 				<td>{{sdg.sdg_title}}</th>
 
-				<td style="font-size: 14px;">
-					<a href="{% url 'sub:detail_sdg' sdg.sdg_title %}"><i class="bx bx-food-menu" title="View"></i>
-					<a href="{% url 'sub:edit_sdg' sdg.sdg_title %}"><i class="bx bx-edit-alt" title="Edit"></i>
-					<a href="{% url 'sub:delete_sdg' sdg.sdg_title %}"><i class="bx bx-trash" title="Delete"></i>
+				<td>
+					<a href="{% url 'sub:detail_sdg' sdg.sdg_title %}" class="btn btn-primary">View</a>&nbsp;
+					<a href="{% url 'sub:edit_sdg' sdg.sdg_title %}" class="btn btn-success">Edit</a>&nbsp;
+					<a href="{% url 'sub:delete_sdg' sdg.sdg_title %}" class="btn btn-danger">Delete</a>
 				</td>
 
 			  </tr>
