--- a/sub/templates/sub/tbl_stakeholder.html
+++ b/sub/templates/sub/tbl_stakeholder.html
@@ -32,7 +32,7 @@
 		  </table> 
 		  <br>
 
-		  <table id="tbl" class="table table-hover">
+		  <table id="tbl" class="table table-bordered">
 			<thead>
 			  <tr>
 				<th scope="col">NAME</th>
@@ -52,10 +52,10 @@
 				<td>{{stakeholder.city}}</td>
 				<td>{{stakeholder.contact_no}}</td>
 
-				<td style="font-size: 14px;">
-					<a href="{% url 'sub:detail_stakeholder' stakeholder.stakeholder_id %}"><i class="bx bx-food-menu" title="View"></i>
-					<a href="{% url 'sub:edit_stakeholder' stakeholder.stakeholder_id %}"><i class="bx bx-edit-alt" title="Edit"></i>
-					<a href="{% url 'sub:delete_stakeholder' stakeholder.stakeholder_id %}"><i class="bx bx-trash" title="Delete"></i>
+				<td>
+					<a href="{% url 'sub:detail_stakeholder' stakeholder.stakeholder_id %}" class="btn btn-primary">View</a>&nbsp;
+					<a href="{% url 'sub:edit_stakeholder' stakeholder.stakeholder_id %}" class="btn btn-success">Edit</a>&nbsp;
+					<a href="{% url 'sub:delete_stakeholder' stakeholder.stakeholder_id %}" class="btn btn-danger">Delete</a>
 				</td>
 
 			  </tr>
